# dddguard

./: .gitignore  README.md  draw_flow.md  pyproject.toml  ruff.toml
docs/: CODE_QUALITY.md  DEPENDENCY_RULES.md  DEV_STATUS_REPORT.md  USER_GUIDE.md
docs/dddguard/: big_project_diagram.drawio  config.yaml
docs/dddguard/cli/: drawer_cli.md  linter_cli.md  scaffolder_cli.md  scanner_cli.md
docs/dddguard/scaffolder/: principles.md
docs/progress/: 2025-12-30.md  TODO.md
docs/scanner/classification/: design.md
docs/scanner/detection/: design.md
presentation/: colores.md  p2.md  plan.md
presentation/slidev/: package-lock.json  slides.md
presentation/slidev/components/global/: TableOfContents.vue
presentation/slidev/components/intro/: Benefits.vue  Observation.vue  Solution.vue
presentation/slidev/components/macro/: BenefitsView.vue  DomainToContextFlow.vue
presentation/slidev/components/micro/: ApplicationLayerView.vue  CompositionLayerView.vue  ContextAnatomyView.vue  ContextTree.vue  DiagramPlaceholder.vue  DrivenSideView.vue  DrivingSideView.vue  GuardRule.vue  LogicalDiagram.vue  LogicalLegend.vue  ParserLogicView.vue  PhysicalStructureSplit.vue
presentation/slidev/layouts/: hero.vue  section.vue  stage.vue
presentation/slidev/slides/: 00-toc.md  01-intro.md  02-ddd-flow.md  03-00-micro-intro.md  03-01-anatomy.md  03-02-parser.md  03-03-domain.md  03-04-application.md  03-05-driven.md  03-06-driving.md  03-07-composition.md  03-micro.md  04-tooling.md
scripts/: README.md  verify_code_quality.sh
src/dddguard/linter/: __init__.py  composition.py  provider.py
src/dddguard/linter/app/: __init__.py  check_project_uc.py  errors.py  interfaces.py
src/dddguard/linter/composition/: container.py
src/dddguard/linter/domain/: __init__.py  errors.py  events.py  rule_engine_service.py  value_objects.py
src/dddguard/root/: cli.py  composition.py
src/dddguard/scaffolder/: __init__.py  container.py  provider.py
src/dddguard/scaffolder/adapters/: assets.py
src/dddguard/scaffolder/app/: __init__.py  create_config_uc.py  errors.py  interfaces.py
src/dddguard/scaffolder/composition/: container.py
src/dddguard/scaffolder/domain/: __init__.py  assets.py  errors.py  services.py  value_objects.py
src/dddguard/scanner/: __init__.py  container.py  provider.py
src/dddguard/scanner/adapters/: assets.py  errors.py
src/dddguard/scanner/app/: __init__.py  errors.py  interfaces.py
src/dddguard/scanner/classification/: provider.py
src/dddguard/scanner/composition/: __init__.py  container.py
src/dddguard/scanner/detection/: provider.py
src/dddguard/scanner/domain/: __init__.py  entities.py  errors.py  graph_expansion_service.py  graph_filtering_service.py  value_objects.py
src/dddguard/scanner/ports/: errors.py
src/dddguard/shared/: __init__.py  provider.py
src/dddguard/shared/assets/: __init__.py  access_policies.py  asset_help.py  asset_legend.py  asset_naming.py  cli_docs.py  ddd_registry.py  ddd_rules_data.py  html_templates_data.py  naming_cloud.py  policy_data.py  text_content_data.py  themes_data.py
src/dddguard/shared/composition/: __init__.py  config_provider.py
src/dddguard/shared/domain/: __init__.py  access_policy.py  architecture_enums.py  code_graph_ent.py  config_vo.py  enums.py  registry.py  rules.py
src/dddguard/visualizer/: __init__.py  container.py  provider.py
src/dddguard/visualizer/app/: __init__.py  errors.py  interfaces.py
src/dddguard/visualizer/composition/: container.py
src/dddguard/visualizer/domain/: __init__.py  context_tower_aggregate.py  (+2 more)
tests/linter/: conftest.py
tests/linter/unit/: test_rule_engine_service.py
tests/scanner/: conftest.py
tests/scanner/e2e/: test_full_scan_pipeline.py
tests/scanner/flow/: test_discover_contexts_uc.py  test_inspect_tree_uc.py  test_run_scan_uc.py  test_scanner_facade.py
tests/scanner/unit/: test_graph_expansion_service.py  test_graph_filtering_prune.py  test_graph_filtering_service.py
(+292 files in other folders)
