[project]
name = "dddguard"
version = "1.0.0"
description = "Architecture Guard & Linter for DDD projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sense1Tapo4ek", email = "egorssupermail@gmail.com" }
]
license = { text = "MIT" }
keywords = ["ddd", "architecture", "linter", "clean-architecture", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]


dependencies = [
    "typer>=0.12.0",
    "dishka>=1.4.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "typing-extensions>=4.5.0",
    "rich>=13.0.0",
    "inquirerpy>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/MeshcheryTapo4ek/dddguard"
Repository = "https://github.com/MeshcheryTapo4ek/dddguard"
Issues = "https://github.com/MeshcheryTapo4ek/dddguard/issues"

[project.scripts]
dddguard = "dddguard.root.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dddguard"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
