[project]
name = "dddguard"
version = "1.1.0"
description = "Architecture Guard & Linter & Scanner for DDD projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sense1Tapo4ek", email = "egorssupermail@gmail.com" }
]
license = { text = "MIT" }
keywords = ["ddd", "architecture", "linter", "clean-architecture", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]


dependencies = [
    "typer>=0.12.0",
    "dishka>=1.4.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "typing-extensions>=4.5.0",
    "rich>=13.0.0",
    "inquirerpy>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/MeshcheryTapo4ek/dddguard"
Repository = "https://github.com/MeshcheryTapo4ek/dddguard"
Issues = "https://github.com/MeshcheryTapo4ek/dddguard/issues"

[project.scripts]
dddguard = "dddguard.root.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dddguard"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["dddguard"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable this
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Allow gradual typing
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

# Specific module configurations
[[tool.mypy.overrides]]
module = [
    "dishka.*",
    "inquirerpy.*",
    "yaml.*",
]
ignore_missing_imports = true
